# compio

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
compio-core/: Cargo.toml
compio-core/src/: lib.rs  queue.rs
compio-core/src/platform/: epoll.rs  iocp.rs  kqueue.rs  mod.rs  unix.rs
compio-core/src/platform/kqueue/: mach.rs  mod.rs
compio-evqueue/: Cargo.toml
compio-evqueue/src/: evqueue.rs  lib.rs
compio-evqueue/src/io_uring/: ext.rs  features.rs  mod.rs  operation.rs  sys.rs  tests.rs
compio-ipc/: Cargo.toml  build.rs
compio-ipc/benches/: channel.rs
compio-ipc/src/: lib.rs
compio-ipc/src/platform/: unix.rs  windows.rs
compio-ipc/src/platform/unix/: mach.rs  mod.rs  seqpacket.rs
compio-ipc/src/platform/unix/mach/: channel.rs  error.rs  mach.h  mod.rs  sys.rs
compio-local/: Cargo.toml
compio-local/src/: lib.rs
compio-net/: Cargo.toml
compio-net/src/: lib.rs  tcp.rs
compio-net/src/platform/unix/: mod.rs  tcp.rs
compio-net/src/platform/windows/: tcp.rs
compio-threadpool/: Cargo.toml
compio-threadpool/src/: lib.rs
compio-traits/: Cargo.toml
compio-traits/src/: lib.rs  pinned_buffer.rs
src/: lib.rs
