[package]
name = "compio-core"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.5"
futures-core = "0.3.4"
crossbeam = "0.4.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.43"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "minwinbase", "winbase", "handleapi", "ioapiset", "winsock2"] }
winhandle = "0.3.0"
futures-util = "0.3.4"

[dev-dependencies]
nix = "0.11.0"
futures-task = "0.3.4"