[package]
name = "compio-evqueue"
version = "0.0.0"
edition = "2018"

[features]
default = ["io-uring"]

io-uring = []

[dependencies]
cfg-if = "1.0"
futures-util = { version = "0.3.6", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
tracing = { version = "0.1.21", default-features = false, features = ["std", "attributes"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.79"
