cargo-features = ["rename-dependency"]

[package]
name = "compio-local"
version = "0.1.0"
edition = "2018"

[dependencies]
compio-core = { version = "0.1.0", path = "../compio-core" }

pin-utils = "=0.1.0-alpha.3"
scoped-tls = "0.1.2"
futures_core = { package = "futures-core-preview", version = "=0.3.0-alpha.9" }
futures_util = { package = "futures-util-preview", version = "=0.3.0-alpha.9" }